// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoginSocialButtons /> renders all buttons 1`] = `
<Fragment>
  <div
    className="font-weight-semi-bold"
  >
    <FormattedMessage
      id="authenticate-with"
      values={Object {}}
    />
  </div>
  <SamlLoginButton />
  <OpenIDLoginButton
    buttonColor="#ABABAB"
    key="0"
    labelColor="#FFFFFF"
    switchUserMode={false}
    text="Cap Collectif Oauth2 Provider"
  />
  <FranceConnectLoginButton
    key="1"
  />
  <InjectIntl(FacebookLoginButton) />
  <InjectIntl(GoogleLoginButton) />
  <p
    className="p--centered"
  >
    <FormattedMessage
      id="login.or"
      values={Object {}}
    />
  </p>
</Fragment>
`;

exports[`<LoginSocialButtons /> renders nothing 1`] = `""`;

exports[`<LoginSocialButtons /> renders only Facebook button 1`] = `
<Fragment>
  <div
    className="font-weight-semi-bold"
  >
    <FormattedMessage
      id="authenticate-with"
      values={Object {}}
    />
  </div>
  <InjectIntl(FacebookLoginButton) />
  <p
    className="p--centered"
  >
    <FormattedMessage
      id="login.or"
      values={Object {}}
    />
  </p>
</Fragment>
`;

exports[`<LoginSocialButtons /> renders only FranceConnect button 1`] = `
<Fragment>
  <div
    className="font-weight-semi-bold"
  >
    <FormattedMessage
      id="authenticate-with"
      values={Object {}}
    />
  </div>
  <FranceConnectLoginButton
    key="1"
  />
  <p
    className="p--centered"
  >
    <FormattedMessage
      id="login.or"
      values={Object {}}
    />
  </p>
</Fragment>
`;

exports[`<LoginSocialButtons /> renders only Google button 1`] = `
<Fragment>
  <div
    className="font-weight-semi-bold"
  >
    <FormattedMessage
      id="authenticate-with"
      values={Object {}}
    />
  </div>
  <InjectIntl(GoogleLoginButton) />
  <p
    className="p--centered"
  >
    <FormattedMessage
      id="login.or"
      values={Object {}}
    />
  </p>
</Fragment>
`;

exports[`<LoginSocialButtons /> renders only OpenID button 1`] = `
<Fragment>
  <div
    className="font-weight-semi-bold"
  >
    <FormattedMessage
      id="authenticate-with"
      values={Object {}}
    />
  </div>
  <OpenIDLoginButton
    buttonColor="#ABABAB"
    key="0"
    labelColor="#FFFFFF"
    switchUserMode={false}
    text="Cap Collectif Oauth2 Provider"
  />
  <p
    className="p--centered"
  >
    <FormattedMessage
      id="login.or"
      values={Object {}}
    />
  </p>
</Fragment>
`;

exports[`<LoginSocialButtons /> renders only SAML button 1`] = `
<Fragment>
  <div
    className="font-weight-semi-bold"
  >
    <FormattedMessage
      id="authenticate-with"
      values={Object {}}
    />
  </div>
  <SamlLoginButton />
  <p
    className="p--centered"
  >
    <FormattedMessage
      id="login.or"
      values={Object {}}
    />
  </p>
</Fragment>
`;

exports[`<LoginSocialButtons /> renders without OR separator 1`] = `
<Fragment>
  <div
    className="font-weight-semi-bold"
  >
    <FormattedMessage
      id="authenticate-with"
      values={Object {}}
    />
  </div>
  <SamlLoginButton />
  <OpenIDLoginButton
    buttonColor="#ABABAB"
    key="0"
    labelColor="#FFFFFF"
    switchUserMode={false}
    text="Cap Collectif Oauth2 Provider"
  />
  <FranceConnectLoginButton
    key="1"
  />
  <InjectIntl(FacebookLoginButton) />
  <InjectIntl(GoogleLoginButton) />
</Fragment>
`;
